homework(#2): Notification by web-push and email.
