# backend/app.js
@@ -6,6 +6,9 @@ const bet = require('./routes/bet')
 const random01 = require('./routes/random01')
 const user = require('./routes/user')
 const wallet = require('./routes/wallet')
+const notification = require('./routes/notification')
+const mail = require('./routes/mail')
+const push = require('./routes/push')
 
 const app = express()
 const port = process.env.PORT || 5000
@@ -21,3 +24,6 @@ app.use('/bet', bet)
 app.use('/random01', random01)
 app.use('/user', user.router)
 app.use('/wallet', wallet)
+app.use('/notification', notification)
+app.use('/mail', mail)
+app.use('/push', push)
